--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -1,3 +1,40 @@
+body {
+  font-family: "Arial";
+}
 .none {
   display: none!important;
+}
+.news .news-data {
+  padding-top: 20px;
+}
+.news .news-data .article {
+  margin-bottom: 30px;
+}
+.news .news-data .article img {
+  width: 160px;
+  height: 160px;
+  object-fit: cover;
+  display: inline-block;
+  margin-right: 20px;
+}
+.news .news-data .article .article-data {
+  display: inline-block;
+  max-width: 700px;
+  vertical-align: top;
+}
+.news .news-data .article .article-data a {
+  display: inline-block;
+  font-size: 16px;
+}
+.news .news-data .article .article-data p {
+  font-size: 13px;
+  display: inline-block;
+}
+.news .news-data .article .article__content {
+  margin-top: 10px;
+  font-family: "Georgia";
+  font-size: 17px;
+}
+.news .news-data .article .article__content.none {
+  display: none;
 }
